<resources>
    <string name="add_description_mini">Join your favorite communities in Campfire</string>
    <string name="add_description">Campfire offers many social functions. Fandoms, chats, system and karma. Create an account and become a moderator of the fandom. For each community there is only one fandom, there is no creator or administrator, fandom is controlled only by its subscribers.

        Campfire has anime fandoms and gaming fandoms.</string>
    <string name="app_whoops">Whoops!</string>
    <string name="app_retry">Retry</string>
    <string name="app_cancel">Cancel</string>
    <string name="app_continue">Continue</string>
    <string name="app_back">Back</string>
    <string name="app_dont_show_again">Don\'t show again</string>
    <string name="app_attention">Attention</string>
    <string name="app_downloading">Downloading</string>
    <string name="app_downloaded">Downloaded</string>
    <string name="app_loading">Loading</string>
    <string name="app_done">Done</string>
    <string name="app_choose">Choose</string>
    <string name="app_link">Link</string>
    <string name="app_notifications">Notifications</string>
    <string name="app_notify">Notify</string>
    <string name="app_style">Style</string>
    <string name="app_bookmarks">Bookmarks</string>
    <string name="app_to_finish">Finish</string>
    <string name="app_drafts">Drafts</string>
    <string name="app_settings">Settings</string>
    <string name="app_about">About</string>
    <string name="app_report">Report</string>
    <string name="app_update">Update</string>
    <string name="app_remove">Remove</string>
    <string name="app_to_drafts">To drafts</string>
    <string name="app_move">Move</string>
    <string name="app_display_above">Display above…</string>
    <string name="app_display_before">Display before…</string>
    <string name="app_block">Block</string>
    <string name="app_blocked">Blocked</string>
    <string name="app_block_title">Block</string>
    <string name="app_change">Change</string>
    <string name="app_send">Send</string>
    <string name="app_search">Search</string>
    <string name="app_comment">Comment</string>
    <string name="app_exit">Exit</string>
    <string name="app_follows">Follows</string>
    <string name="app_followers">Followers</string>
    <string name="app_rates">Rates</string>
    <string name="app_publications">Publications</string>
    <string name="app_publication">Publication</string>
    <string name="app_removed">Removed</string>
    <string name="app_reported">Your report was received. We will check this shortly.</string>
    <string name="app_report_already_exist">You have already reported this</string>
    <string name="app_published">Published</string>
    <string name="app_publish">Publish</string>
    <string name="app_changed">Changed</string>
    <string name="app_save">Save</string>
    <string name="app_accept">Accept</string>
    <string name="app_restore">Restore</string>
    <string name="app_i_agree">I agree</string>
    <string name="app_achievements">Achievements</string>
    <string name="app_clear_reports">Clear reports</string>
    <string name="app_clear_reports_confirm">Clear reports?</string>
    <string name="app_clear">Clear</string>
    <string name="app_no">No</string>
    <string name="app_yes">Yes</string>
    <string name="app_punish">Punish</string>
    <string name="app_punishments">Punishments</string>
    <string name="app_punish_confirm">Punish this user?</string>
    <string name="app_level">Level</string>
    <string name="app_karma_count_30_days">Karma in 30 days</string>
    <string name="app_karma">Karma</string>
    <string name="app_username">Username</string>
    <string name="app_nothing_found">Nothing Found</string>
    <string name="app_privilege">Privilege</string>
    <string name="app_copy">Copy</string>
    <string name="app_quote">Quote</string>
    <string name="app_copied">Copied</string>
    <string name="app_message">Message</string>
    <string name="app_name_s">Name</string>
    <string name="app_ratings">Ratings</string>
    <string name="app_tags">Tags</string>
    <string name="app_user">User</string>
    <string name="app_moderation">Moderation</string>
    <string name="app_do_cancel">Cancel</string>
    <string name="app_fandoms">Fandoms</string>
    <string name="app_users">Users</string>
    <string name="app_chat">Chat</string>
    <string name="app_chats">Chats</string>
    <string name="app_forum">Forum</string>
    <string name="app_forums">Forums</string>
    <string name="app_create">Create</string>
    <string name="app_text">Text</string>
    <string name="app_got_it">Got it</string>
    <string name="app_follow">Follow</string>
    <string name="app_unfollow">Unfollow</string>
    <string name="app_online">Online</string>
    <string name="app_was_online">%s online %s</string>
    <string name="app_crop">Crop</string>
    <string name="app_tag">Tag</string>
    <string name="app_category">Category</string>
    <string name="app_is_typing">is typing…</string>
    <string name="app_feed">Feed</string>
    <string name="app_genres">Genres</string>
    <string name="app_instrument">Instrument</string>
    <string name="app_purpose">Purpose</string>
    <string name="app_composition">Composition</string>
    <string name="app_type">Type</string>
    <string name="app_platforms">Platforms</string>
    <string name="app_controllers">Controllers</string>
    <string name="app_other_names">Other names</string>
    <string name="app_uploading">Uploading</string>
    <string name="app_administration">Administration</string>
    <string name="app_reject">Reject</string>
    <string name="app_profile">Profile</string>
    <string name="app_image">Image</string>
    <string name="app_empty">Empty</string>
    <string name="app_open">Open</string>
    <string name="app_share">Share</string>
    <string name="app_copy_link">Copy link</string>
    <string name="app_copy_link_with_language">Copy link with language</string>
    <string name="app_choose_template">Choose a template</string>
    <string name="app_moderator">Moderator</string>
    <string name="app_admin">Admin</string>
    <string name="app_protoadmin">Protoadmin</string>
    <string name="app_d">d.</string>
    <string name="app_description">Description</string>
    <string name="app_add">Add</string>
    <string name="app_status">Status</string>
    <string name="app_subscription">Subscription</string>
    <string name="app_subscribers">Subscribers</string>
    <string name="app_do_mark">Mark</string>
    <string name="app_do_unmark">Unmark</string>
    <string name="app_remove_image">Remove image</string>
    <string name="app_remove_link">Remove link</string>
    <string name="app_naming">Title</string>
    <string name="app_rename">Rename</string>
    <string name="app_not_required">Not a requirement</string>
    <string name="app_to_return">Return</string>
    <string name="app_show_all">Show all</string>
    <string name="app_all">All</string>
    <string name="app_hide">Hide</string>
    <string name="app_forgive">Forgive</string>
    <string name="app_forgive_confirm">Forgive the prisoner?</string>
    <string name="app_deprive_moderator">Deprive moderating</string>
    <string name="app_deprive">Deprive</string>
    <string name="app_make">Make</string>
    <string name="app_review">Review</string>
    <string name="app_reviews">Reviews</string>
    <string name="app_other">Other</string>
    <string name="app_create_post">Create post</string>
    <string name="app_add_into_draft">Add to draft</string>
    <string name="app_add_to_message">Add to message</string>
    <string name="app_add_to_anything">Fast post to Anything</string>
    <string name="app_close">Close</string>
    <string name="app_remove_text">Remove text</string>
    <string name="app_bot">Bot</string>
    <string name="app_note">Note</string>
    <string name="app_congratulations">Congratulations!</string>
    <string name="app_edited">edited</string>
    <string name="app_comments">Comments</string>
    <string name="he">he</string>
    <string name="she">she</string>
    <string name="he_baned">banned</string>
    <string name="she_baned">banned</string>
    <string name="he_blocked">blocked</string>
    <string name="she_blocked">blocked</string>
    <string name="he_gained">gained</string>
    <string name="she_gained">gained</string>
    <string name="he_suggest">suggest</string>
    <string name="she_suggest">suggest</string>
    <string name="he_accept">accept</string>
    <string name="she_accept">accept</string>
    <string name="he_changed">changed</string>
    <string name="she_changed">changed</string>
    <string name="he_remove">remove</string>
    <string name="she_remove">remove</string>
    <string name="he_rename">rename</string>
    <string name="she_rename">rename</string>
    <string name="he_created">created</string>
    <string name="she_created">created</string>
    <string name="he_add">add</string>
    <string name="she_add">add</string>
    <string name="he_mark">marked</string>
    <string name="she_mark">marked</string>
    <string name="he_return">return</string>
    <string name="she_return">return</string>
    <string name="he_comment">comment</string>
    <string name="she_comment">comment</string>
    <string name="he_rate">rate</string>
    <string name="she_rate">rate</string>
    <string name="he_subscribed">subscribed</string>
    <string name="she_subscribed">subscribed</string>
    <string name="he_replied">replied</string>
    <string name="she_replied">replied</string>
    <string name="he_make">make</string>
    <string name="she_make">make</string>
    <string name="he_was">was</string>
    <string name="she_was">was</string>
    <string name="he_forgive">forgive</string>
    <string name="she_forgive">forgive</string>
    <string name="he_warn">warn</string>
    <string name="she_warn">warn</string>
    <string name="he_warned">warned</string>
    <string name="she_warned">warned</string>
    <string name="he_deprived">deprived</string>
    <string name="she_deprived">deprived</string>
    <string name="he_reject">rejected</string>
    <string name="she_reject">rejected</string>
    <string name="he_restore">restored</string>
    <string name="she_restore">restored</string>
    <string name="he_move">moved</string>
    <string name="she_move">moved</string>
    <string name="filter_events">Events</string>
    <string name="filter_posts">Posts</string>
    <string name="filter_comment">Comments</string>
    <string name="filter_chat_messages">Chat Messages</string>
    <string name="filter_moderations">Moderations</string>
    <string name="filter_moderations_block">Blocks</string>
    <string name="filter_only_important">Important only</string>
    <string name="admin_make_moder">Make a moderator</string>
    <string name="admin_change_name">Change name</string>
    <string name="time_never">Never</string>
    <string name="time_hour">Hour</string>
    <string name="time_2_hour">2 hours</string>
    <string name="time_8_hour">8 hours</string>
    <string name="time_day">Day</string>
    <string name="time_week">Week</string>
    <string name="time_month">Month</string>
    <string name="time_all">All-time</string>
    <string name="notifications_follows_new_content">%s %s new publication</string>
    <string name="notifications_fandom_suggested">%s %s new fandom</string>
    <string name="moderation_widget_comment">Your comment</string>
    <string name="moderation_widget_punishment">Punishment</string>
    <string name="moderation_widget_block_in_app">Block user in whole application</string>
    <string name="moderation_widget_block_user_punishments">User punishments: Bans - %s, Warnings - %s</string>
    <string name="moderation_widget_block_publications">Block last hour publications</string>
    <string name="fandom_tags_name">Name of tag</string>
</resources>