<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v4.widget.NestedScrollView
        style="@style/Scroll.Widget">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.sup.dev.android.views.settings.SettingsArrow
                android:id="@+id/vPunishments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:Settings_title="@string/moderation_widget_block_user_punishments"/>

            <com.sup.dev.android.views.settings.SettingsCheckBox
                android:id="@+id/vRemoveUnits"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:Settings_title="@string/moderation_widget_block_publications"/>

            <com.sup.dev.android.views.settings.SettingsSelection
                android:id="@+id/vBlockUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:Settings_title="@string/moderation_widget_punishment"/>

            <com.sup.dev.android.views.settings.SettingsCheckBox
                android:id="@+id/vBlockInApp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:Settings_title="@string/moderation_widget_block_in_app"/>

            <com.sup.dev.android.views.settings.SettingsField
                android:id="@+id/vComment"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine|textCapSentences|textAutoCorrect|textAutoComplete"
                android:hint="@string/moderation_widget_comment"/>

            <com.sup.dev.android.views.views.ViewButton
                android:id="@+id/vTemplate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                style="@style/Button.Text"
                android:text="@string/app_choose_template"/>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <com.sup.dev.android.views.views.ViewButton
            android:id="@+id/vCancel"
            style="@style/Button.Text"
            android:layout_marginEnd="8dp"
            android:text="@string/app_cancel"/>

        <com.sup.dev.android.views.views.ViewButton
            android:id="@+id/vEnter"
            style="@style/Button.Text"
            android:text="@string/app_block"/>

    </LinearLayout>

</LinearLayout>
