<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <android.support.v4.widget.NestedScrollView
        style="@style/Scroll.Widget">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_gravity="center">

                <com.sup.dev.android.views.views.ViewCircleImage
                    android:id="@+id/vImage"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@color/focus_dark"/>

                <com.sup.dev.android.views.views.ViewIcon
                    android:id="@+id/vImageIcon"
                    style="@style/Icon.18"
                    android:layout_gravity="center"
                    android:src="?ic_add_18dp"/>

            </FrameLayout>

            <com.sup.dev.android.views.settings.SettingsField
                android:id="@+id/vName"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="textCapSentences|textAutoComplete|textAutoCorrect"
                android:hint="@string/fandom_tags_name"/>

            <com.sup.dev.android.views.settings.SettingsField
                android:id="@+id/vComment"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine|textCapSentences|textAutoCorrect|textAutoComplete"
                android:hint="@string/moderation_widget_comment"/>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="9dp"
        android:orientation="horizontal">

        <com.sup.dev.android.views.views.ViewButton
            android:id="@+id/vCancel"
            style="@style/Button.Text"
            android:layout_marginRight="8dp"
            android:text="@string/app_cancel"/>

        <com.sup.dev.android.views.views.ViewButton
            android:id="@+id/vEnter"
            style="@style/Button.Text"
            android:text="@string/app_create"/>

    </LinearLayout>



</LinearLayout>